deploy: b71637cd4a72db8556bd129619aaf227134970af

--- a/content/chiffrement_vernam.html
+++ b/content/chiffrement_vernam.html
@@ -349,10 +349,10 @@ document.write(`
 <li><p>En utilisant l’opérateur binaire <code class="docutils literal notranslate"><span class="pre">xor</span></code> bit à bit entre le message <code class="docutils literal notranslate"><span class="pre">m</span></code> et la clé <code class="docutils literal notranslate"><span class="pre">k</span></code>, donner la valeur binaire du message chiffré <code class="docutils literal notranslate"><span class="pre">c</span></code>.</p></li>
 </ol>
 </li>
-<li><p>Chaque lettre est encodé en binaire avec la norme unicode. Les caractères ASCII sont encodés sur 1 octet. On en donne souvent une représentation hexadécimale.</p>
+<li><p>Chaque lettre est encodée en binaire avec la norme unicode. Les caractères ASCII sont encodés sur 1 octet. On en donne souvent une représentation hexadécimale.</p>
 <ol class="loweralpha simple">
 <li><p>Donner l’encodage binaire sur 3 octets du mot <strong>NSI</strong>.</p></li>
-<li><p>Chiffrer le mot <strong>NSI</strong> en utilisant une clé <code class="docutils literal notranslate"><span class="pre">k=0101...01</span></code> constitué des bits 0 et 1 en alternance sur 3 octets.</p></li>
+<li><p>Chiffrer le mot <strong>NSI</strong> en utilisant une clé <code class="docutils literal notranslate"><span class="pre">k=0101...01</span></code> constituée des bits 0 et 1 en alternance sur 3 octets.</p></li>
 <li><p>Retrouver les caractères associés au message chiffré.</p></li>
 </ol>
 </li>
